# poetry_setup

./: .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
src/: Dockerfile.dev  Dockerfile.prod
