[tool.poetry]
name = "Poetry Setup"
version = "1.0.0"
description = "Poetry Setup"
authors = ["deffer <deffer@doubletapp.io>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.12.0"

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.flake8]
ignore = "E203, E266, E501, E999, W503, F401, F403"
max-line-length = 120
max-complexity = 9
select = "B, C, E, F, W, T4, B9"
exclude = ".git, .venv"

[tool.isort]
profile = "black"
combine_as_imports = true
default_section = "THIRDPARTY"
include_trailing_comma = true
line_length = 120
multi_line_output = 3
not_skip = "__init__.py"
skip_glob = ".venv"

[build-system]
requires = ["poetry-core>=1.1.13"]
build-backend = "poetry.core.masonry.api"
